# Adafruit_Python_PureIO

./: .gitignore  .pylintrc  .travis.yml  CODE_OF_CONDUCT.md  README.md  README.rst  optional_requirements.txt  pyproject.toml  setup.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  release.yml
Adafruit_PureIO/: smbus.py  spi.py
docs/: api.rst  api.rst.license  conf.py  index.rst
tests/: test_I2C.py  test_chip.py
